sort and show manufacturer with most stolen

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,18 @@
     <title>Bikes Stolen</title>
   </head>
   <body>
-    <h1>Bikes Stolen at this Location</h1>
+    <div class = "container">
+      <h1>Bikes Stolen at this Location</h1>
 
-    <label for="location">Where?</label>
-    <input type="text" name="location" id="location">
-    <label for="distance">Distance?</label>
-    <input type="number" name="num" id="distance">
-
-    <button id="submit">Get stolen bikes</button>
-    <p id="results"></p>
+      <label for="location">Where?</label>
+      <input type="text" name="location" id="location">
+      <br>
+      <label for="distance">Distance?</label>
+      <input type="number" name="num" id="distance">
+      <br>
+      <button id="submit">Get stolen bikes</button>
+      <p id="results"></p>
+    </div>
+    
   </body>
 </html>
